--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
