--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.12.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
     "js-cookie": "^3.0.5",
